--- a/index.html
+++ b/index.html
@@ -16,8 +16,19 @@
     <link rel="manifest" href="manifest.json">
     <!-- Android -->
     <meta name="theme-color" content="#3498DB">
-
     <link rel="shortcut icon" type="image/ico" href="img/favicon.ico"/>
+
+    <!-- IOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="img/icons/icon-192x192.png">
+
+    <link rel="apple-touch-icon" sizes="152x152" href="img/icons/icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="img/icons/icon-152x152.png">
+
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Twittor!">
+
 
 </head>
 <body>
